dabar jau tinakmas komentavimas

--- a/css/home.css
+++ b/css/home.css
@@ -1,8 +1,8 @@
 /* base */
+@import './base/base.css';
+@import './base/layout.css';
 @import './base/reset.css';
 @import './base/variables.css';
-@import './base/layout.css';
-@import './base/base.css';
 
 /* 3rd-party */
 /* @import './3rd-party/font-awesome.min.css'; */
@@ -20,17 +20,8 @@
 /* hero start */
 /* hero end */
 
-/* about me start */
-/* about me end */
-
-/* skills start */
-/* skills end */
-
-/* resume start */
-/* resume end */
-
-/* achievements start */
-/* achievements end */
+/* about me + skills start */
+/* about me + skills end */
 
 /* services start */
 /* services end */
@@ -41,11 +32,14 @@
 /* testimonials start */
 /* testimonials end */
 
+/* achievements with counters start */
+/* achievements with counters end */
+
 /* blog start */
 /* blog end */
 
-/* get in touch start */
-/* get in touch end */
+/* contact us start */
+/* contact us end */
 
 /* footer start */
 /* footer end */
