--- a/css/base/base.css
+++ b/css/base/base.css
@@ -1,1 +1,32 @@
 /* bendro pobudzio elementai, kuriuos galima naudoti skirtingose vietose, nepriklausomai nuo konteksto */
+
+@font-face {
+    font-family: PoppinsRegular;
+    src: url('../../fonts/Poppins-Regular.ttf');
+}
+
+@font-face {
+    font-family: PoppinsBold;
+    src: url('../../fonts/Poppins-ExtraBold.ttf');
+}
+
+body {
+    font-family: PoppinsRegular;
+}
+
+.section-title h3 {
+    position: relative;
+    display: inline-block;
+    font-family: PoppinsBold;
+    font-size: 36px;
+    color: rgb(52, 52, 52);
+}
+
+.section-title h3:after {
+    content: '';
+    position: absolute;
+    border-bottom: 4px dotted rgb(216, 216, 216);
+    width: 100%;
+    bottom: -10px;
+    left: 0;
+}
