--- a/css/components/header.css
+++ b/css/components/header.css
@@ -32,7 +32,7 @@
     align-items: center;
     position: relative;
     color: white;
-    z-index: 99;
+    z-index: 1;
 }
 
 /* position: absolute;
@@ -58,7 +58,7 @@ z-index: 2;
 
 .hamburger {
     display: none;
-    z-index: 99;
+    z-index: 2;
 }
 
 .bar {
@@ -95,11 +95,12 @@ z-index: 2;
 
 .nav-logo {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-start;
    font-size: 3.5rem;
     font-weight: 900;
     color: white;
     padding: 20px;
+    
 }
 
 .nav-logo:hover {
@@ -109,6 +110,7 @@ z-index: 2;
 
 @media only screen and (max-width: 768px) {
     .nav-menu {
+        display: flex;
         position: fixed;
         left: -100%;
         top: 11rem;
@@ -141,7 +143,7 @@ z-index: 2;
     .hamburger {
         display: block;
         cursor: pointer;
-        z-index: 99;
+        z-index: 1;
         color: white;
         /* position: active; */
     }
