--- a/css/components/header.css
+++ b/css/components/header.css
@@ -4,7 +4,6 @@
 .home-header {
     display: flex;
     justify-content: center;
-    
     height: 100vh;
     background-size: cover;
     position: relative;
@@ -13,7 +12,7 @@
     background-position: 0px 0px;
 }
 
-.home-header::after {
+.home-header:after {
     content: '';
     position: absolute;
     top: 0;
@@ -22,6 +21,7 @@
     right: 0;
     background: #000;
     opacity: .65;
+
 }
 
 .home-text {
@@ -49,9 +49,10 @@ z-index: 2;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 1.5rem;
+    padding: 1rem 10rem;
     z-index: 99;
     width: 100%;
+    
 }
 
 
@@ -129,7 +130,7 @@ z-index: 2;
         top: 0;
         left: 0;
     }
-    .nav-link {
+    .nav-link{
         
         color: black;
         
@@ -145,7 +146,6 @@ z-index: 2;
         cursor: pointer;
         z-index: 1;
         color: white;
-        /* position: active; */
     }
     .hamburger.active .bar:nth-child(2) {
         opacity: 0;
