--- a/css/components/header.css
+++ b/css/components/header.css
@@ -1,6 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
 
 
+.social-icon {
+    display: flex;
+    flex-direction: row;
+}
+
+
+.icon-item {
+    padding-top: 3.5px;
+    margin: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 34px;
+    height: 34px;
+    border-radius: 50%;
+    background: #000;
+    opacity: .60;
+    color: white;
+    z-index: 2;
+    
+   
+   
+}
+
 .home-header {
     display: flex;
     justify-content: center;
@@ -24,6 +48,10 @@
 
 }
 
+.active-text {
+    margin-bottom: 35px;
+}
+
 .home-text {
     height: 60%;
     display: flex;
@@ -33,6 +61,7 @@
     position: relative;
     color: white;
     z-index: 1;
+    
 }
 
 /* position: absolute;
@@ -49,9 +78,9 @@ z-index: 2;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 10rem;
+    padding-top: 3rem;
     z-index: 99;
-    width: 100%;
+    width: 100vw;
     
 }
 
@@ -96,8 +125,8 @@ z-index: 2;
 
 .nav-logo {
     display: flex;
-    justify-content: flex-start;
-   font-size: 3.5rem;
+    justify-content: center;
+   font-size: 2.5rem;
     font-weight: 900;
     color: white;
     padding: 20px;
