--- a/css/base/base.css
+++ b/css/base/base.css
@@ -34,3 +34,22 @@ p {
     color: #748182;
     text-align: center;
 }
+
+.icons {
+    border: none;
+    width: max-content;
+    width: 70px;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+    background-color: #f4f4f4;
+    margin: 30px auto;
+}
+
+.icons:hover {
+    color: #f4f4f4;
+    background-color: #1c1c1c;
+    transition: all ease-in-out 0.3s;
+}
