--- a/css/components/header.css
+++ b/css/components/header.css
@@ -68,13 +68,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 3rem;
+    padding-top: 48px;
     z-index: 99;
     width: 100vw;
     
 }
-
-
 
 .hamburger {
     display: none;
@@ -119,7 +117,7 @@
    font-size: 2.5rem;
     font-weight: 900;
     color: white;
-    padding: 20px;
+    padding: 10px 0;
     
 }
 
@@ -158,7 +156,7 @@
         left: 0;
     }
     .nav-item {
-        margin: 2.5rem 0;
+        margin: 40px 0;
     }
     .hamburger {
         display: block;
