--- a/css/base/base.css
+++ b/css/base/base.css
@@ -23,6 +23,17 @@ h2 {
     text-align: center;
     margin: 10px 0;
 }
+/* #blog h3 {
+    display: flex;
+    align-items: left;
+    justify-content: left;
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 1.6;
+    margin-bottom: 15px;
+} */
+
+   
 
 .section-title h2 {
     font-weight: 800;
