--- a/css/home.css
+++ b/css/home.css
@@ -89,78 +89,78 @@
 /* achievements with counters end */
 
 /* blog start */
+
 .section-title {
-    margin-top: 40px;
+	margin-top: 40px;
 }
 
 a:hover {
-    text-decoration: none;
-    color:#939393 
+	text-decoration: none;
+	color: #939393
 }
 
 .under-line {
-    text-decoration: underline;
-    color:#939393 
+	text-decoration: underline;
+	color: #939393
 }
 
 .under-line:hover {
-    text-decoration: underline;
-    color:#939393 
+	text-decoration: underline;
+	color: #939393
 }
 
 .trend-text {
-    color:#939393 ;
+	color: #939393;
 }
 
 .blog-text:hover {
-    text-decoration: none;
-    color: black; 
+	text-decoration: none;
+	color: black;
 }
 
 .blog-text {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 100%;
-    color: black;  
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	width: 100%;
+	color: black;
 }
 
 .img {
-    width: 100%;
-    height: auto;
+	width: 100%;
+	height: auto;
 }
 
 .flex {
-    display: flex;
-    align-items: start;
-    flex-direction: column;
+	display: flex;
+	align-items: start;
+	flex-direction: column;
 }
 
-  .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  }
+.card:hover {
+	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
 
- .card-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center; 
-  }
+.card-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
 
-  .blog-container {
-    background-color: #f4f4f4;
-    padding: 50px 0;
-  }
-  
-  .card {
-    margin: 10px 15px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;  
-    width: 35%;
-    border: black;
-  }
-  
-  
+.blog-container {
+	background-color: #f4f4f4;
+	padding: 50px 0;
+}
+
+.card {
+	margin: 10px 15px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	transition: 0.3s;
+	width: 35%;
+	border: black;
+}
+
 /* blog end */
 
 /* contact us start */
@@ -169,10 +169,10 @@ a:hover {
 	padding: 50px 0;
 }
 
-#contact .contact-card{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+#contact .contact-card {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 #contact .contact-item-title {
@@ -209,8 +209,7 @@ a:hover {
 	margin-bottom: 30px;
 }
 
-#contact form input:not([type='submit']),
-#contact form textarea {
+#contact form input:not([type='submit']), #contact form textarea {
 	background: #f4f4f4;
 	padding: 12px;
 	color: #ccc;
@@ -219,9 +218,11 @@ a:hover {
 	outline: none;
 	width: 100%;
 }
+
 /* contact us end */
 
 /* footer start */
+
 #footer {
 	height: 80px;
 	background-color: #1c1c1c;
@@ -229,9 +230,11 @@ a:hover {
 	align-items: center;
 	justify-content: center;
 }
+
 #footer p {
 	font-size: 13px;
-    word-spacing: 2px;
+	word-spacing: 2px;
 	margin: 0;
 }
+
 /* footer end */
