--- a/css/home.css
+++ b/css/home.css
@@ -24,8 +24,81 @@
 /* hero end */
 
 /* about me + skills start */
+.about-container {
+	padding-top: 100px;
+	padding-bottom: 70px;
+}
+
+.about-container .about-me-skills {
+	margin-top: 20px;
+	margin-bottom: 50px;
+	width: 100%;
+}
+
+.about-container .skills-progress {
+	width: 100%;
+	padding: 5px 10px;
+}
+
+.about-container .item {
+	border: 1px solid black;
+	margin-bottom: 15px;
+	border-radius: 10px;
+	background-color: black;
+    color: white;
+}
+.about-container .about-me-skills .span {
+	width: 21%;
+}
+
+.about-container .about-me-skills h6 {
+	margin-top: 7px;
+    margin-bottom: 7px;
+}
+
+/* .about-container .about-me-skills .span::after {
+	content: attr(data-value);
+	color: #fff;
+	top: 6px;
+	font-size: 11px;
+
+} */
+
+
+.about-me-section {
+    align-items: flex-start;
+	display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+
+.about-me-right-side {
+    align-items: start;
+	display: flex;
+    flex-direction: column;
+}
+
+
+.about-me-right-side > span {
+	color: #999;
+	letter-spacing: 3px;
+	margin-bottom: 20px;
+}
+
+.about-me-right-side p {
+	font-size: 15px;
+	line-height: 1.6;
+	text-align: start;
+}
+
+.about-me-right-side p span {
+	font-weight: 600;
+}
+
 
 /* about me + skills end */
+
 
 /* services start */
 
